force-app/main/default/objects/CommercientSF__CusSorMasterPlus__c/CommercientSF__CusSorMasterPlus__c.object-meta.xml
<CustomObject>
    <label>Syspro Customer SO Master Plus</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Syspro Customer SO Master Pluss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>