force-app/main/default/objects/CommercientSF__CusSorMasterPlus__c/fields/CommercientSF__CustomerRating__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CustomerRating__c</fullName>
    <description>CustomerRating</description>
    <label>CustomerRating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>