force-app/main/default/objects/CommercientSF__CusSorMasterPlus__c/fields/CommercientSF__FirstYearOrder__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__FirstYearOrder__c</fullName>
    <description>FirstYearOrder</description>
    <label>FirstYearOrder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>