force-app/main/default/objects/CommercientSF__CusSorMasterPlus__c/fields/CommercientSF__FormOfPayment__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__FormOfPayment__c</fullName>
    <description>FormOfPayment</description>
    <label>FormOfPayment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>