force-app/main/default/objects/CommercientSF__CusSorMasterPlus__c/fields/CommercientSF__InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__InvoiceNumber__c</fullName>
    <description>InvoiceNumber</description>
    <label>InvoiceNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>