force-app/main/default/objects/CommercientSF__CusSorMasterPlus__c/fields/CommercientSF__OrderProfile__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OrderProfile__c</fullName>
    <description>OrderProfile</description>
    <label>OrderProfile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>