force-app/main/default/objects/CommercientSF__CusSorMasterPlus__c/fields/CommercientSF__OrderSubstrateFini__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OrderSubstrateFini__c</fullName>
    <description>OrderSubstrateFini</description>
    <label>OrderSubstrateFini</label>
    <length>255</length>
    <type>Text</type>
</CustomField>