force-app/main/default/objects/CommercientSF__CusSorMasterPlus__c/fields/CommercientSF__OrderVerification__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OrderVerification__c</fullName>
    <description>OrderVerification</description>
    <label>OrderVerification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>