force-app/main/default/objects/CommercientSF__CusSorMasterPlus__c/fields/CommercientSF__OutsideBonus__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OutsideBonus__c</fullName>
    <description>OutsideBonus</description>
    <label>OutsideBonus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>