force-app/main/default/objects/CommercientSF__CusSorMasterPlus__c/fields/CommercientSF__OutsideRep__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OutsideRep__c</fullName>
    <description>OutsideRep</description>
    <label>OutsideRep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>