force-app/main/default/objects/CommercientSF__CusSorMasterPlus__c/fields/CommercientSF__PanelRibType__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PanelRibType__c</fullName>
    <description>PanelRibType</description>
    <label>PanelRibType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>