force-app/main/default/objects/CommercientSF__CusSorMasterPlus__c/fields/CommercientSF__ProductionWarehous__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ProductionWarehous__c</fullName>
    <description>ProductionWarehous</description>
    <label>ProductionWarehous</label>
    <length>255</length>
    <type>Text</type>
</CustomField>