force-app/main/default/objects/CommercientSF__CusSorMasterPlus__c/fields/CommercientSF__ProjectAddress1__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ProjectAddress1__c</fullName>
    <description>ProjectAddress1</description>
    <label>ProjectAddress1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>