force-app/main/default/objects/CommercientSF__CusSorMasterPlus__c/fields/CommercientSF__ProjectAddress2__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ProjectAddress2__c</fullName>
    <description>ProjectAddress2</description>
    <label>ProjectAddress2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>