force-app/main/default/objects/CommercientSF__CusSorMasterPlus__c/fields/CommercientSF__ProjectCity__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ProjectCity__c</fullName>
    <description>ProjectCity</description>
    <label>ProjectCity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>