force-app/main/default/objects/CommercientSF__CusSorMasterPlus__c/fields/CommercientSF__ProjectName__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ProjectName__c</fullName>
    <description>ProjectName</description>
    <label>ProjectName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>