force-app/main/default/objects/CommercientSF__CusSorMasterPlus__c/fields/CommercientSF__ProjectState__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ProjectState__c</fullName>
    <description>ProjectState</description>
    <label>ProjectState</label>
    <length>255</length>
    <type>Text</type>
</CustomField>