force-app/main/default/objects/CommercientSF__CusSorMasterPlus__c/fields/CommercientSF__ProjectZip__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ProjectZip__c</fullName>
    <description>ProjectZip</description>
    <label>ProjectZip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>