force-app/main/default/objects/CommercientSF__CusSorMasterPlus__c/fields/CommercientSF__PromoCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PromoCode__c</fullName>
    <description>PromoCode</description>
    <label>PromoCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>