force-app/main/default/objects/CommercientSF__CusSorMasterPlus__c/fields/CommercientSF__RoofType__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__RoofType__c</fullName>
    <description>RoofType</description>
    <label>RoofType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>