force-app/main/default/objects/CommercientSF__CusSorMasterPlus__c/fields/CommercientSF__SecondTelephone__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SecondTelephone__c</fullName>
    <description>SecondTelephone</description>
    <label>SecondTelephone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>