force-app/main/default/objects/CommercientSF__CusSorMasterPlus__c/fields/CommercientSF__Syspro_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Syspro_Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Syspro Sales Order</label>
    <referenceTo>CommercientSF__SorMasterRep__c</referenceTo>
    <relationshipLabel>Syspro Customer SO Master Pluss</relationshipLabel>
    <relationshipName>Syspro_Customer_SO_Master_Pluss</relationshipName>
    <type>Lookup</type>
</CustomField>