force-app/main/default/objects/CommercientSF__CusSorMasterPlus__c/fields/CommercientSF__Telephone__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Telephone__c</fullName>
    <description>Telephone</description>
    <label>Telephone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>